force-app/main/default/objects/Agendamento__c.object
<CustomObject>
    <recordTypes>
        <fullName>AtendimentoCentroLogistico</fullName>
        <active>true</active>
        <label>Atendimento Centro Logístico</label>
    </recordTypes>
    <recordTypes>
        <fullName>AtendimentoRebocadores</fullName>
        <active>true</active>
        <label>Atendimento Rebocadores</label>
    </recordTypes>
    <recordTypes>
        <fullName>AtendimentoTeconRioGrande</fullName>
        <active>true</active>
        <label>Atendimento Tecon Rio Grande</label>
    </recordTypes>
    <recordTypes>
        <fullName>AtendimentoTeconSalvador</fullName>
        <active>true</active>
        <label>Atendimento Tecon Salvador</label>
    </recordTypes>
</CustomObject>