force-app/main/default/objects/Agendamento__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o agendamento recorrente está ativo para geração de Casos.</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>