force-app/main/default/objects/Agendamento__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Conta na qual o agendamento será criado. Uma conta pode possuir múltiplos agendamentos.</description>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conta</relationshipLabel>
    <relationshipName>Conta</relationshipName>
    <type>Lookup</type>
</CustomField>