force-app/main/default/objects/Agendamento__c/fields/DataInicio__c.field-meta.xml
<CustomField>
    <fullName>DataInicio__c</fullName>
    <description>Data a partir da qual a rotina passa a criar Casos.</description>
    <label>Data de início</label>
    <type>Date</type>
</CustomField>