force-app/main/default/objects/Agendamento__c/fields/DescricaoAtividade__c.field-meta.xml
<CustomField>
    <fullName>DescricaoAtividade__c</fullName>
    <description>Texto que descreve o motivo e a rotina do atendimento.</description>
    <label>Descrição da atividade</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>