force-app/main/default/objects/Agendamento__c/fields/DiasDaSemana__c.field-meta.xml
<CustomField>
    <fullName>DiasDaSemana__c</fullName>
    <description>Dias da semana em que o Case recorrente deve ser criado, quando Frequência = &quot;Dias específicos da semana&quot;.</description>
    <label>Dias da Semana</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Segunda</fullName>
            </value>
            <value>
                <fullName>Terça</fullName>
            </value>
            <value>
                <fullName>Quarta</fullName>
            </value>
            <value>
                <fullName>Quinta</fullName>
            </value>
            <value>
                <fullName>Sexta</fullName>
            </value>
            <value>
                <fullName>Sábado</fullName>
            </value>
            <value>
                <fullName>Domingo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>