force-app/main/default/objects/Agendamento__c/fields/Frequencia__c.field-meta.xml
<CustomField>
    <fullName>Frequencia__c</fullName>
    <description>Diária, dias específicos da semana, semanal, mensal, trimestral ou anual.</description>
    <label>Frequência</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diária</fullName>
                <default>true</default>
                <label>Diária</label>
            </value>
            <value>
                <fullName>Dias específicos da semana</fullName>
            </value>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Mensal</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
            <value>
                <fullName>Anual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>