force-app/main/default/objects/Agendamento__c/fields/HorarioExecucao__c.field-meta.xml
<CustomField>
    <fullName>HorarioExecucao__c</fullName>
    <description>Horário previsto para criação do Caso.</description>
    <label>Horário</label>
    <type>Time</type>
</CustomField>