force-app/main/default/objects/Agendamento__c/fields/OwnerQueueDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>OwnerQueueDeveloperName__c</fullName>
    <description>DeveloperName da fila proprietária quando o tipo for QUEUE.</description>
    <label>Proprietário (Fila)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>