force-app/main/default/objects/Agendamento__c/fields/OwnerType__c.field-meta.xml
<CustomField>
    <fullName>OwnerType__c</fullName>
    <description>Usuário ou fila, obedecendo à Unidade de Negócio.</description>
    <label>Tipo de Proprietário</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USER</fullName>
                <default>true</default>
                <label>USER</label>
            </value>
            <value>
                <fullName>QUEUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>