force-app/main/default/objects/Agendamento__c/fields/OwnerUser__c.field-meta.xml
<CustomField>
    <fullName>OwnerUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuário proprietário quando o tipo for USER.</description>
    <label>Proprietário (Usuário)</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Proprietário (Usuário)</relationshipLabel>
    <relationshipName>OwnerUser</relationshipName>
    <type>Lookup</type>
</CustomField>