force-app/main/default/objects/Agendamento__c/fields/ProximaExecucao__c.field-meta.xml
<CustomField>
    <fullName>ProximaExecucao__c</fullName>
    <description>Data/hora calculada pelo motor de agendamento para a próxima execução elegível deste registro, considerando frequência, dias da semana específicos e PularFimDeSemana__c.</description>
    <label>Próxima Execução</label>
    <type>DateTime</type>
</CustomField>