force-app/main/default/objects/Agendamento__c/fields/PularFimDeSemana__c.field-meta.xml
<CustomField>
    <fullName>PularFimDeSemana__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se a execução cair sábado ou domingo, a criação será pulada e ocorrerá somente no próximo dia útil aplicável.</description>
    <label>Finais de semana</label>
    <type>Checkbox</type>
</CustomField>