force-app/main/default/objects/Agendamento__c/fields/TipoCaso__c.field-meta.xml
<CustomField>
    <fullName>TipoCaso__c</fullName>
    <description>Tipo de Caso da categorização recorrente.</description>
    <label>Tipo de Caso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WS_Tipo_de_Caso</valueSetName>
    </valueSet>
</CustomField>