force-app/main/default/objects/Agendamento__c/fields/UltimaExecucao__c.field-meta.xml
<CustomField>
    <fullName>UltimaExecucao__c</fullName>
    <description>Data/hora da última vez que o motor de agendamento criou um Case com sucesso a partir deste registro.</description>
    <label>Última Execução</label>
    <type>DateTime</type>
</CustomField>