force-app/main/default/objects/Agendamento__c/fields/UltimoErroExecucao__c.field-meta.xml
<CustomField>
    <fullName>UltimoErroExecucao__c</fullName>
    <description>Falhas da schedule deverão ser registradas em Log de Integração.</description>
    <label>Erros</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>