force-app/main/default/objects/Agendamento__c/fields/UnidadeNegocio__c.field-meta.xml
<CustomField>
    <fullName>UnidadeNegocio__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnidadeNegocio</valueSetName>
    </valueSet>
</CustomField>